# eclcli

./: .gitignore  .testr.conf  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
eclcli/: __init__.py  i18n.py  shell.py
eclcli/api/: api.py  auth.py  eclsdk.py  image_v1.py  image_v2.py  object_store_v1.py
eclcli/bare/: bare_utils.py  client.py
eclcli/bare/bareclient/: __init__.py  base.py  client.py  extension.py  i18n.py  service_catalog.py  utils.py
eclcli/bare/bareclient/v2/: __init__.py  availability_zones.py  client.py  flavors.py  images.py  keypairs.py  limits.py  metadata.py  ports.py  servers.py  stocks.py  uefis.py  versions.py
eclcli/bare/v2/: flavor.py  keypair.py  limit.py  metadata.py  port.py  server.py  stock.py  uefi.py  version.py  zone.py
eclcli/common/: availability_zone.py  clientmanager.py  configuration.py  exceptions.py  extension.py  limits.py  module.py  parseractions.py  quota.py  timing.py  utils.py
eclcli/compute/: client.py
eclcli/compute/v2/: agent.py  aggregate.py  console.py  fixedip.py  flavor.py  floatingip.py  floatingippool.py  host.py  hypervisor.py  hypervisor_stats.py  keypair.py  security_group.py  server.py  service.py  usage.py
eclcli/database/: client.py
eclcli/database/v1/: database.py  datastore.py  flavor.py  instance.py  user.py
eclcli/dh/: client.py
eclcli/dh/dhclient/: __init__.py  auth_plugin.py  base.py  client.py  crypto.py  exceptions.py  extension.py  i18n.py  service_catalog.py  utils.py
eclcli/dh/dhclient/common/: _i18n.py  cliutils.py  uuidutils.py
eclcli/dh/dhclient/v2/: __init__.py  client.py  licenses.py  servers.py  shell.py  usages.py
eclcli/dh/v2/: license.py  server.py  usage.py
eclcli/dns/: client.py
eclcli/dns/v2/: nameserver.py  record.py  zone.py
eclcli/iam/: client.py
eclcli/iam/v1/: role.py  user.py
eclcli/iam/v2/: group.py  role.py
eclcli/identity/: client.py  common.py
eclcli/identity/v2_0/: catalog.py  ec2creds.py  endpoint.py  project.py  role.py  service.py  token.py  user.py
eclcli/identity/v3/: catalog.py  consumer.py  credential.py  domain.py  ec2creds.py  endpoint.py  federation_protocol.py  group.py  identity_provider.py  mapping.py  policy.py  project.py  region.py  role.py  role_assignment.py  service.py  service_provider.py  token.py  trust.py  unscoped_saml.py  user.py
eclcli/image/: client.py  extensions.py
eclcli/image/v2/: image.py
eclcli/interconnectivity/: client.py
eclcli/interconnectivity/interconnectivityclient/: __init__.py  client.py  i18n.py  version.py
eclcli/interconnectivity/interconnectivityclient/common/: clientmanager.py  exceptions.py  serializer.py  utils.py  validators.py
eclcli/interconnectivity/interconnectivityclient/v1/: client.py
eclcli/interconnectivity/v1/: cic.py  mcic.py  operation.py
eclcli/mlb/: client.py
eclcli/mlb/v1/: mlb_certificate.py  mlb_health_monitor.py  mlb_listener.py  mlb_load_balancer.py  mlb_operation.py  mlb_plan.py  mlb_policy.py  mlb_route.py  mlb_rule.py  mlb_system_update.py  mlb_target_group.py  mlb_tls_policy.py
eclcli/monitoring/: client.py  monitoring_utils.py
eclcli/monitoring/monitoringclient/: __init__.py  base.py  client.py  exc.py  shell.py  utils.py
eclcli/monitoring/monitoringclient/v2/: __init__.py  alarms.py  capabilities.py  client.py  event_types.py  events.py  meters.py  options.py  query.py  resources.py  samples.py  shell.py  statistics.py  trait_descriptions.py  traits.py
eclcli/monitoring/v2/: alarm.py  capability.py  meter.py  resource.py  sample.py
eclcli/network/: client.py  common.py
eclcli/network/networkclient/: __init__.py  client.py  i18n.py
eclcli/network/v2/: colocation_logical_link.py  colocation_physical_link.py  colocation_space.py  common_function.py  common_function_gateway.py  common_function_pool.py  fic_gateway.py  fic_interface.py  fic_service.py  firewall.py  firewall_interface.py  firewall_plan.py  gateway_interface.py  interdc_gateway.py  interdc_interface.py  interdc_service.py  internet_gateway.py  internet_service.py  load_balancer.py  load_balancer_interface.py  load_balancer_plan.py  load_balancer_syslog_server.py  network.py  physical_port.py  port.py  public_ip.py  qos_option.py  quota.py  reserved_address.py  static_route.py  subnet.py  vpn_gateway.py  vpn_interface.py  vpn_service.py
eclcli/object/: client.py
eclcli/object/v1/: account.py  container.py  object.py
eclcli/orchestration/: client.py
eclcli/orchestration/heatclient/: client.py  exc.py  shell.py
eclcli/orchestration/v1/: build_info.py  event.py  resource.py  resource_type.py  service.py  snapshot.py  software_config.py  software_deployment.py  stack.py  template.py
eclcli/provider_connectivity/: client.py
eclcli/provider_connectivity/v1/: address_assignment.py  operation.py  tenant_connection.py  tenant_connection_request.py
eclcli/rca/: client.py
eclcli/rca/rcaclient/: __init__.py  auth_plugin.py  base.py  client.py  extension.py  service_catalog.py  utils.py
eclcli/rca/rcaclient/common/: _i18n.py  (+2 more)
eclcli/rca/v2/: user.py  version.py
eclcli/security_order/: client.py
eclcli/security_order/v1/: device.py  ha_device.py  host_based_security.py  waf.py
eclcli/security_order/v3/: device.py  ha_device.py  host_based_security.py  waf.py
eclcli/sss/: client.py
eclcli/sss/sssclient/: __init__.py  client.py  i18n.py  version.py
eclcli/sss/v1/: api_keypair.py  channel.py  contract.py  role.py  tenant.py  user.py
eclcli/sss/v2/: channel.py  contract.py  role.py  tenant.py  user.py  workspace.py
eclcli/storage/: client.py
eclcli/storage/storageclient/: __init__.py  auth_plugin.py  base.py  client.py  exceptions.py  extension.py  service_catalog.py  utils.py
eclcli/storage/v2/: availability_zone.py  snapshot.py  storage.py  volume.py  volume_type.py
eclcli/vnf/: client.py
eclcli/vnf/v1/: operation.py  virtual_network_appliance.py  virtual_network_appliance_plan.py
eclcli/volume/: client.py
eclcli/volume/v2/: backup.py  qos_specs.py  snapshot.py  volume.py  volume_type.py
(+80 files in other folders)
