[metadata]
name = eclcli
version = 1.0.1
summary = CLI for Enterprise Cloud 2.0
description-file =
    README.rst
author = NTT Communications
author-email = ecl-cli-sdk@ntt.com
home-page = https://ecl.ntt.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    eclcli

[entry_points]
console_scripts =
    ecl = eclcli.shell:main

keystoneclient.auth.plugin =
    token_endpoint = eclcli.api.auth_plugin:TokenEndpoint
    osc_password = eclcli.api.auth_plugin:OSCGenericPassword

ecl.cli =
    command_list = eclcli.common.module:ListCommand

ecl.cli.base =
    compute = eclcli.compute.client
    identity = eclcli.identity.client
    image = eclcli.image.client
    network = eclcli.network.client
    volume = eclcli.volume.client
    bare = eclcli.bare.client
    storage = eclcli.storage.client
    interconnectivity = eclcli.interconnectivity.client
    rca = eclcli.rca.client
    sss = eclcli.sss.client
    dh = eclcli.dh.client

ecl.common =
    compute_availability-zone_list = eclcli.common.availability_zone:ListAvailabilityZone
    compute_limits_show = eclcli.common.limits:ShowLimits

ecl.compute.v2 =
    compute_console-url_show = eclcli.compute.v2.console:ShowConsoleURL

    compute_flavor_list = eclcli.compute.v2.flavor:ListFlavor
    compute_flavor_show = eclcli.compute.v2.flavor:ShowFlavor

    compute_keypair_create = eclcli.compute.v2.keypair:CreateKeypair
    compute_keypair_delete = eclcli.compute.v2.keypair:DeleteKeypair
    compute_keypair_list = eclcli.compute.v2.keypair:ListKeypair
    compute_keypair_show = eclcli.compute.v2.keypair:ShowKeypair

    compute_server-volume_add = eclcli.compute.v2.server:AddServerVolume
    compute_server_create = eclcli.compute.v2.server:CreateServer
    compute_server_delete = eclcli.compute.v2.server:DeleteServer
    compute_server-image_create = eclcli.compute.v2.server:CreateServerImage
    compute_server_list = eclcli.compute.v2.server:ListServer
    compute_server-volume_remove = eclcli.compute.v2.server:RemoveServerVolume
    compute_server_resize = eclcli.compute.v2.server:ResizeServer
    compute_server_update = eclcli.compute.v2.server:SetServer
    compute_server_show = eclcli.compute.v2.server:ShowServer
    compute_server_start = eclcli.compute.v2.server:StartServer
    compute_server_stop = eclcli.compute.v2.server:StopServer
    compute_server_unset = eclcli.compute.v2.server:UnsetServer

ecl.image.v2 =
    image_add-member = eclcli.image.v2.image:AddProjectToImage
    image_remove-member = eclcli.image.v2.image:RemoveProjectImage
    image_create = eclcli.image.v2.image:CreateImage
    image_delete = eclcli.image.v2.image:DeleteImage
    image_list = eclcli.image.v2.image:ListImage
    image_download = eclcli.image.v2.image:SaveImage
    image_show = eclcli.image.v2.image:ShowImage
    image_update = eclcli.image.v2.image:SetImage

ecl.network.v2 =
    network_logical-network_list = eclcli.network.v2.network:ListNetwork
    network_logical-network_show = eclcli.network.v2.network:ShowNetwork
    network_logical-network_create = eclcli.network.v2.network:CreateNetwork
    network_logical-network_update = eclcli.network.v2.network:SetNetwork
    network_logical-network_delete = eclcli.network.v2.network:DeleteNetwork

    network_subnet_list = eclcli.network.v2.subnet:ListSubnet
    network_subnet_show = eclcli.network.v2.subnet:ShowSubnet
    network_subnet_create = eclcli.network.v2.subnet:CreateSubnet
    network_subnet_update = eclcli.network.v2.subnet:SetSubnet
    network_subnet_delete = eclcli.network.v2.subnet:DeleteSubnet

    network_port_list = eclcli.network.v2.port:ListPort
    network_port_show = eclcli.network.v2.port:ShowPort
    network_port_create = eclcli.network.v2.port:CreatePort
    network_port_update = eclcli.network.v2.port:SetPort
    network_port_delete = eclcli.network.v2.port:DeletePort

    network_physical-port_list = eclcli.network.v2.physical_port:ListPhysicalPort
    network_physical-port_show = eclcli.network.v2.physical_port:ShowPhysicalPort

    network_reserved-address_list = eclcli.network.v2.reserved_address:ListReservedAddress
    network_reserved-address_show = eclcli.network.v2.reserved_address:ShowReservedAddress

    network_quota_show = eclcli.network.v2.quota:ShowQuota

    network_qos_list = eclcli.network.v2.qos_option:ListQosOption
    network_qos_show = eclcli.network.v2.qos_option:ShowQosOption

    network_inet-service_list = eclcli.network.v2.internet_service:ListInternetService
    network_inet-service_show = eclcli.network.v2.internet_service:ShowInternetService

    network_inet-gw_list = eclcli.network.v2.internet_gateway:ListInternetGateway
    network_inet-gw_show = eclcli.network.v2.internet_gateway:ShowInternetGateway
    network_inet-gw_create = eclcli.network.v2.internet_gateway:CreateInternetGateway
    network_inet-gw_update = eclcli.network.v2.internet_gateway:SetInternetGateway
    network_inet-gw_delete = eclcli.network.v2.internet_gateway:DeleteInternetGateway

    network_gw-interface_list = eclcli.network.v2.gateway_interface:ListGwInterface
    network_gw-interface_show = eclcli.network.v2.gateway_interface:ShowGwInterface
    network_gw-interface_create = eclcli.network.v2.gateway_interface:CreateGwInterface
    network_gw-interface_update = eclcli.network.v2.gateway_interface:SetGwInterface
    network_gw-interface_delete = eclcli.network.v2.gateway_interface:DeleteGwInterface

    network_public-ip_list = eclcli.network.v2.public_ip:ListPubicIP
    network_public-ip_show = eclcli.network.v2.public_ip:ShowPubicIP
    network_public-ip_create = eclcli.network.v2.public_ip:CreatePubicIP
    network_public-ip_update = eclcli.network.v2.public_ip:SetPubicIP
    network_public-ip_delete = eclcli.network.v2.public_ip:DeletePubicIP

    network_static-route_list = eclcli.network.v2.static_route:ListStaticRoute
    network_static-route_show = eclcli.network.v2.static_route:ShowStaticRoute
    network_static-route_create = eclcli.network.v2.static_route:CreateStaticRoute
    network_static-route_update = eclcli.network.v2.static_route:SetStaticRoute
    network_static-route_delete = eclcli.network.v2.static_route:DeleteStaticRoute

    network_vpn-service_list = eclcli.network.v2.vpn_service:ListVPNService
    network_vpn-service_show = eclcli.network.v2.vpn_service:ShowVPNService

    network_vpn-gw_list = eclcli.network.v2.vpn_gateway:ListVPNGateway
    network_vpn-gw_show = eclcli.network.v2.vpn_gateway:ShowVPNGateway

    network_vpn-interface_list = eclcli.network.v2.vpn_interface:ListVPNInterface
    network_vpn-interface_show = eclcli.network.v2.vpn_interface:ShowVPNInterface

    network_interdc-service_list = eclcli.network.v2.interdc_service:ListInterDCService
    network_interdc-service_show = eclcli.network.v2.interdc_service:ShowInterDCService

    network_interdc-gw_list = eclcli.network.v2.interdc_gateway:ListInterDCGateway
    network_interdc-gw_show = eclcli.network.v2.interdc_gateway:ShowInterDCGateway

    network_interdc-interface_list = eclcli.network.v2.interdc_interface:ListInterDCInterface
    network_interdc-interface_show = eclcli.network.v2.interdc_interface:ShowInterDCInterface
    network_interdc-interface_create = eclcli.network.v2.interdc_interface:CreateInterDCInterface
    network_interdc-interface_update = eclcli.network.v2.interdc_interface:SetInterDCInterface
    network_interdc-interface_delete = eclcli.network.v2.interdc_interface:DeleteInterDCInterface

    network_firewall-plan_list = eclcli.network.v2.firewall_plan:ListFirewallPlan
    network_firewall-plan_show = eclcli.network.v2.firewall_plan:ShowFirewallPlan

    network_firewall_list = eclcli.network.v2.firewall:ListFirewall
    network_firewall_show = eclcli.network.v2.firewall:ShowFirewall
    network_firewall_create = eclcli.network.v2.firewall:CreateFirewall
    network_firewall_update = eclcli.network.v2.firewall:SetFirewall
    network_firewall_delete = eclcli.network.v2.firewall:DeleteFirewall
    network_firewall_reboot = eclcli.network.v2.firewall:RebootFirewall
    network_firewall_reset-password = eclcli.network.v2.firewall:ResetPasswordFirewall

    network_firewall-interface_list = eclcli.network.v2.firewall_interface:ListFirewallInterface
    network_firewall-interface_show = eclcli.network.v2.firewall_interface:ShowFirewallInterface
    network_firewall-interface_update = eclcli.network.v2.firewall_interface:SetFirewallInterface

    network_load-balancer-plan_list = eclcli.network.v2.load_balancer_plan:ListLoadBalancerPlan
    network_load-balancer-plan_show = eclcli.network.v2.load_balancer_plan:ShowLoadBalancerPlan

    network_load-balancer_list = eclcli.network.v2.load_balancer:ListLoadBalancer
    network_load-balancer_show = eclcli.network.v2.load_balancer:ShowLoadBalancer
    network_load-balancer_create = eclcli.network.v2.load_balancer:CreateLoadBalancer
    network_load-balancer_update = eclcli.network.v2.load_balancer:SetLoadBalancer
    network_load-balancer_delete = eclcli.network.v2.load_balancer:DeleteLoadBalancer
    network_load-balancer_reboot = eclcli.network.v2.load_balancer:RebootLoadBalancer
    network_load-balancer_reset-password = eclcli.network.v2.load_balancer:ResetPasswordLoadBalancer

    network_load-balancer-interface_list = eclcli.network.v2.load_balancer_interface:ListLoadBalancerInterface
    network_load-balancer-interface_show = eclcli.network.v2.load_balancer_interface:ShowLoadBalancerInterface
    network_load-balancer-interface_update = eclcli.network.v2.load_balancer_interface:SetLoadBalancerInterface

    network_common-function-pool_list = eclcli.network.v2.common_function_pool:ListCommonFunctionPool
    network_common-function-pool_show = eclcli.network.v2.common_function_pool:ShowCommonFunctionPool

    network_common-function_list = eclcli.network.v2.common_function:ListCommonFunction
    network_common-function_show = eclcli.network.v2.common_function:ShowCommonFunction

    network_common-function-gw_list = eclcli.network.v2.common_function_gateway:ListCommonFunctionGateway
    network_common-function-gw_show = eclcli.network.v2.common_function_gateway:ShowCommonFunctionGateway
    network_common-function-gw_create = eclcli.network.v2.common_function_gateway:CreateCommonFunctionGateway
    network_common-function-gw_update = eclcli.network.v2.common_function_gateway:SetCommonFunctionGateway
    network_common-function-gw_delete = eclcli.network.v2.common_function_gateway:DeleteCommonFunctionGateway

    network_colocation-space_list = eclcli.network.v2.colocation_space:ListColoSpace
    network_colocation-space_show = eclcli.network.v2.colocation_space:ShowColoSpace

    network_colocation-physical-link_list = eclcli.network.v2.colocation_physical_link:ListColoPhysicalLink
    network_colocation-physical-link_show = eclcli.network.v2.colocation_physical_link:ShowColoPhysicalLink

    network_colocation-logical-link_list = eclcli.network.v2.colocation_logical_link:ListColoLogicalLink
    network_colocation-logical-link_show = eclcli.network.v2.colocation_logical_link:ShowColoLogicalLink
    network_colocation-logical-link_create = eclcli.network.v2.colocation_logical_link:CreateColoLogicalLink
    network_colocation-logical-link_update = eclcli.network.v2.colocation_logical_link:SetColoLogicalLink
    network_colocation-logical-link_delete = eclcli.network.v2.colocation_logical_link:DeleteColoLogicalLink

ecl.volume.v2 =
    compute_volume_create = eclcli.volume.v2.volume:CreateVolume
    compute_volume_delete = eclcli.volume.v2.volume:DeleteVolume
    compute_volume_list = eclcli.volume.v2.volume:ListVolume
    compute_volume_update = eclcli.volume.v2.volume:SetVolume
    compute_volume_show = eclcli.volume.v2.volume:ShowVolume

    compute_volume-type_list = eclcli.volume.v2.volume_type:ListVolumeType

ecl.bare.v2 =
    baremetal_server_create = eclcli.bare.v2.server:CreateServer
    baremetal_server_delete = eclcli.bare.v2.server:DeleteServer
    baremetal_server_list = eclcli.bare.v2.server:ListServer
    baremetal_server_show = eclcli.bare.v2.server:ShowServer
    baremetal_server_start = eclcli.bare.v2.server:StartServer
    baremetal_server_stop = eclcli.bare.v2.server:StopServer
    baremetal_server_reboot = eclcli.bare.v2.server:RebootServer
    baremetal_server_console = eclcli.bare.v2.server:GetConsoleServer

    baremetal_availability_zone_show = eclcli.bare.v2.zone:ShowZone

    baremetal_flavor_show = eclcli.bare.v2.flavor:ShowFlavor
    baremetal_flavor_list = eclcli.bare.v2.flavor:ListFlavor

    baremetal_keypair_create = eclcli.bare.v2.keypair:CreateKeypair
    baremetal_keypair_delete = eclcli.bare.v2.keypair:DeleteKeypair
    baremetal_keypair_list = eclcli.bare.v2.keypair:ListKeypair
    baremetal_keypair_show = eclcli.bare.v2.keypair:ShowKeypair

    baremetal_limit_show = eclcli.bare.v2.limit:ShowLimit

    baremetal_metadata_delete = eclcli.bare.v2.metadata:DeleteMetadata
    baremetal_metadata_list = eclcli.bare.v2.metadata:ListMetadata
    baremetal_metadata_show = eclcli.bare.v2.metadata:ShowMetadata
    baremetal_metadata_merge = eclcli.bare.v2.metadata:MergeMetadata
    baremetal_metadata_replace = eclcli.bare.v2.metadata:ReplaceMetadata
    baremetal_metadata_update = eclcli.bare.v2.metadata:UpdateMetadata

    baremetal_port_show = eclcli.bare.v2.port:ShowPort
    baremetal_port_list = eclcli.bare.v2.port:ListPort

    baremetal_stock_show = eclcli.bare.v2.stock:ShowStock

    baremetal_uefi_show = eclcli.bare.v2.uefi:ShowUEFI
    baremetal_uefi_update = eclcli.bare.v2.uefi:UpdateUEFI

    baremetal_version_show = eclcli.bare.v2.version:ShowVersion
    baremetal_version_list = eclcli.bare.v2.version:ListVersion

ecl.storage.v2 =
    storage_list = eclcli.storage.v2.storage:ListStorage
    storage_show = eclcli.storage.v2.storage:ShowStorage
    storage_create = eclcli.storage.v2.storage:CreateStorage
    storage_update = eclcli.storage.v2.storage:UpdateStorage
    storage_delete = eclcli.storage.v2.storage:DeleteStorage

    storage_volume-type_list = eclcli.storage.v2.volume_type:ListVolumeType
    storage_volume-type_show = eclcli.storage.v2.volume_type:ShowVolumeType

    storage_volume_list = eclcli.storage.v2.volume:ListVolume
    storage_volume_show = eclcli.storage.v2.volume:ShowVolume
    storage_volume_create = eclcli.storage.v2.volume:CreateVolume
    storage_volume_update = eclcli.storage.v2.volume:UpdateVolume
    storage_volume_delete = eclcli.storage.v2.volume:DeleteVolume

    storage_availability-zone_list = eclcli.storage.v2.availability_zone:ListAvailabilityZone

ecl.interconnectivity.v1 =
    interconnectivity_mcic_list = eclcli.interconnectivity.v1.mcic:ListMCIC
    interconnectivity_mcic_show = eclcli.interconnectivity.v1.mcic:ShowMCIC

    interconnectivity_cic_list = eclcli.interconnectivity.v1.cic:ListCIC
    interconnectivity_cic_show = eclcli.interconnectivity.v1.cic:ShowCIC
    interconnectivity_cic_create = eclcli.interconnectivity.v1.cic:CreateCIC
    interconnectivity_cic_delete = eclcli.interconnectivity.v1.cic:DeleteCIC
    interconnectivity_cic_update = eclcli.interconnectivity.v1.cic:UpdateCIC

    interconnectivity_operation_list = eclcli.interconnectivity.v1.operation:ListOperation
    interconnectivity_operation_show = eclcli.interconnectivity.v1.operation:ShowOperation

ecl.rca.v2 =
    rca_user_list    = eclcli.rca.v2.user:ListUser
    rca_user_show    = eclcli.rca.v2.user:ShowUser
    rca_user_create  = eclcli.rca.v2.user:CreateUser
    rca_user_update     = eclcli.rca.v2.user:SetUser
    rca_user_delete  = eclcli.rca.v2.user:DeleteUser

    rca_version_list = eclcli.rca.v2.version:ListVersion
    rca_version_show = eclcli.rca.v2.version:ShowVersion

ecl.sss.v1 =
    sss_user_list             = eclcli.sss.v1.user:ListUser
    sss_user_show             = eclcli.sss.v1.user:ShowUser

    sss_tenant_list           = eclcli.sss.v1.tenant:ListTenant
    sss_tenant_show           = eclcli.sss.v1.tenant:ShowTenant
    sss_tenant_create         = eclcli.sss.v1.tenant:CreateTenant
    sss_tenant_delete         = eclcli.sss.v1.tenant:DeleteTenant

    sss_role_create           = eclcli.sss.v1.role:CreateRole
    sss_role_delete           = eclcli.sss.v1.role:DeleteRole

    sss_update-api-keypair    = eclcli.sss.v1.api_keypair:SetAPIKeypair

    sss_contract_show         = eclcli.sss.v1.contract:ShowContract

    sss_billing_show = eclcli.sss.v1.contract:ShowBilling
    
ecl.dh.v2 =
    dh_server_create = eclcli.dh.v2.server:CreateServer
    dh_server_delete = eclcli.dh.v2.server:DeleteServer
    dh_server_list = eclcli.dh.v2.server:ListServer
    dh_server_show = eclcli.dh.v2.server:ShowServer

    dh_license_create = eclcli.dh.v2.license:CreateLicense
    dh_license_delete = eclcli.dh.v2.license:DeleteLicense
    dh_license_list = eclcli.dh.v2.license:ListLicense
    dh_license-type_list = eclcli.dh.v2.license:ListLicenseType

    dh_usage_list = eclcli.dh.v2.usage:ListUsage
    dh_usage-history_show = eclcli.dh.v2.usage:ShowUsageHistory
